--- a/src/index.css
+++ b/src/index.css
@@ -3051,3 +3051,28 @@ a:active {
   padding: 10px;
   border-radius: 10px;
 }/*# sourceMappingURL=index.css.map */
+
+.ai_image_view{
+  width: 100%;
+  height: 100%;
+  /* margin-top: 11px; */
+  border-radius: 10px;
+}
+
+/* new design grid */
+
+.NewDesignGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* grid-template-rows: repeat(2, 1fr); */
+  gap: 14px;
+  max-width: 1274.5px;
+  margin: auto;
+}
+
+.tryDesignFormDiv .NewDesignGrid img {
+  /* width: 100%;
+  height: 100%; */
+  max-width: 114px;
+  border-radius: 5px;
+}
